nix-ast/src/snapshots/nix_ast__test__fixture@lambda_set.nix.snap
---
source: nix-ast/src/lib.rs
expression: "{ x, y ? 5 + 3, n }: x + y * n\n"
input_file: nix-ast/fixtures/lambda_set.nix
---
Lambda(
    LambdaExpression {
        parameters: Set(
            LambdaParametersSet {
                inner: {
                    "n": LambdaParameter {
                        default: None,
                    },
                    "x": LambdaParameter {
                        default: None,
                    },
                    "y": LambdaParameter {
                        default: Some(
                            Binary(
                                BinaryExpression {
                                    operator: Addition,
                                    left: Int(
                                        5,
                                    ),
                                    right: Int(
                                        3,
                                    ),
                                    postfix: None,
                                },
                            ),
                        ),
                    },
                },
                extra_ignored: false,
                bound: None,
            },
        ),
        body: Binary(
            BinaryExpression {
                operator: Addition,
                left: Ident(
                    "x",
                ),
                right: Binary(
                    BinaryExpression {
                        operator: Multiplication,
                        left: Ident(
                            "y",
                        ),
                        right: Ident(
                            "n",
                        ),
                        postfix: None,
                    },
                ),
                postfix: None,
            },
        ),
    },
)
