nix-ast/src/snapshots/nix_ast__test__fixture@lambda_with_bound.nix.snap
---
source: nix-ast/src/lib.rs
expression: "{ ... }@attrs: attrs.a\n"
input_file: nix-ast/fixtures/lambda_with_bound.nix
---
Lambda(
    LambdaExpression {
        parameters: Set(
            LambdaParametersSet {
                inner: {},
                extra_ignored: true,
                bound: Some(
                    "attrs",
                ),
            },
        ),
        body: Binary(
            BinaryExpression {
                operator: AttributeSelection,
                left: Ident(
                    "attrs",
                ),
                right: Ident(
                    "a",
                ),
                postfix: None,
            },
        ),
    },
)
