nix-ast/src/snapshots/nix_ast__test__fixture@select_or.nix.snap
---
source: nix-ast/src/lib.rs
expression: "let a = null; in a.b.c or 5\n"
input_file: nix-ast/fixtures/select_or.nix
---
Let(
    LetExpression {
        bindings: {
            [
                Value(
                    "a",
                ),
            ]: Ident(
                "null",
            ),
        },
        inner: Binary(
            BinaryExpression {
                operator: AttributeSelection,
                left: Binary(
                    BinaryExpression {
                        operator: AttributeSelection,
                        left: Ident(
                            "a",
                        ),
                        right: Ident(
                            "b",
                        ),
                        postfix: None,
                    },
                ),
                right: Ident(
                    "c",
                ),
                postfix: Some(
                    Int(
                        5,
                    ),
                ),
            },
        ),
    },
)
